refactor login and implement mypage api